# ChangeLog for games-engines/scummvm-tools
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-engines/scummvm-tools/ChangeLog,v 1.65 2014/10/30 02:18:55 mr_bones_ Exp $

  30 Oct 2014; Michael Sterrett <mr_bones_@gentoo.org>
  -files/scummvm-tools-1.4.0-boost.patch, -scummvm-tools-1.4.0.ebuild:
  old

  27 Oct 2014; Agostino Sarubbo <ago@gentoo.org> scummvm-tools-1.7.0.ebuild:
  Stable for ppc64, wrt bug #520878

  18 Oct 2014; Agostino Sarubbo <ago@gentoo.org> scummvm-tools-1.7.0.ebuild:
  Stable for ppc, wrt bug #520878

  12 Oct 2014; Agostino Sarubbo <ago@gentoo.org> scummvm-tools-1.7.0.ebuild:
  Stable for x86, wrt bug #520878

  10 Oct 2014; Agostino Sarubbo <ago@gentoo.org> scummvm-tools-1.7.0.ebuild:
  Stable for amd64, wrt bug #520878

  25 Aug 2014; Michael Sterrett <mr_bones_@gentoo.org>
  -scummvm-tools-1.6.0.ebuild:
  old

*scummvm-tools-1.7.0 (23 Jul 2014)

  23 Jul 2014; Michael Sterrett <mr_bones_@gentoo.org>
  +scummvm-tools-1.7.0.ebuild:
  version bump

*scummvm-tools-1.6.0 (02 Jun 2013)

  02 Jun 2013; Michael Sterrett <mr_bones_@gentoo.org>
  +scummvm-tools-1.6.0.ebuild:
  version bump

  04 Nov 2012; Michael Sterrett <mr_bones_@gentoo.org>
  +files/scummvm-tools-1.4.0-boost.patch, scummvm-tools-1.4.0.ebuild:
  add upstream patch to support building against latest boost (bug #422769)

  01 Nov 2012; Michael Sterrett <mr_bones_@gentoo.org>
  -scummvm-tools-1.3.0.ebuild:
  old

  10 Jul 2012; Michael Sterrett <mr_bones_@gentoo.org>
  scummvm-tools-1.4.0.ebuild:
  use latest boost available

  02 May 2012; Jeff Horelick <jdhore@gentoo.org> scummvm-tools-1.3.0.ebuild,
  scummvm-tools-1.4.0.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  06 Feb 2012; Michael Sterrett <mr_bones_@gentoo.org>
  scummvm-tools-1.4.0.ebuild:
  use $T instead of /tmp - bug #402459

  28 Jan 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  scummvm-tools-1.4.0.ebuild:
  x86 stable wrt bug #400803
