@@ -1,4 +1,4 @@
 DIST scummvm-tools-1.7.0.tar.bz2 956801 SHA256 b4005c3d68e4c5bda4fa9e31f3998fc5b45b7c9381890ed3d5f0b57f77a62589 SHA512 6a04307912327cb91fb4e1689b67ce621c3e28cbd5460c20974384907d21cb266e9d00b74a6991813366d2c34f966d79dc12e71750d083c82b89a2ec654b04b1 WHIRLPOOL 2034eb3817b5e11b0ba626f2b2b88a2e29a973e538f7a43cafffa0247792c4292821dfa20decd18842155938a65cb74af35b18dbf5d0da61b2d4c18e1b1dc2fc
-EBUILD scummvm-tools-1.7.0.ebuild 1911 SHA256 0c7cdbc10f72d1c67afd7c2b992dd93c1e063565510e713f7486e7ddc853316c SHA512 d0102a6a5ebd2fc057edd1089ca7afe4878fc75b4309038f7c1cb97647dbd296db172b9e7e8b38d9556d12f0976b2dbe1a82eb9c528aa4be60667e018a4e62d7 WHIRLPOOL eb6af53f7de05e7c9bea3435c442bdbf4b400fd6181e48cf82fce29d57f4781e2d39abfeec1981c130e59b479cba043bc312ad0c7d904afa3c1da47f85ffe69d
-MISC ChangeLog 8594 SHA256 e342aced2d69fc223d921695a067167116c2c3da8a71c2829f28f3a5dae79c12 SHA512 0ea513cd0d96f03297a7b01e77660ba8282e1ce1d635f24a3e68bb6a3f37f40df291846ade06b8a28659b71afca401068049a4afb500ca494772de4a3352c52b WHIRLPOOL f55ab6a3f6565fade0199e9608498b50d99b87e65edf419021cb33947c2f16915882ac54a99c990bdf3efb786a1b4b159fbe37882e4e21965b94bfd32967de41
+EBUILD scummvm-tools-1.7.0.ebuild 1463 SHA256 fb79dd906d7e4c193f4b87845890ed149e246a0b9751e85f4afab23f210ae94e SHA512 e24b1dae1182b29e414f5762a94418b6f321dcf7bd3e538f8b7423b96792565b06e0caf25b19366ac9465388e436abe5de354f60f66f38c5166fd87609907294 WHIRLPOOL 41def2b475eb384edfebb435cb26a7f0261fef567f654b8ca2efebd5a3004c4f020724839067c89d07ecde98de4346a4e36afd7f48a5a29046b4709235360c6e
+MISC ChangeLog 8687 SHA256 0f6f718937cc881cdf7aa01dbbbda4d803325fd8903833363eedee7a22b8e3b6 SHA512 5fcbec5f8243383142388b6c34c5c03b8e43cbcd841426e1e15fdae7b4686dd70356969037bd718bd2436dae710ff2cbd8dc67b908502316ece7a378f4907f93 WHIRLPOOL 3a4e143b49a8684f35cf0a7893eff49d94d5f15985b4af58df376def104502364860d44566cf3b6fa594582e1c52b9b94da37354d7bccf9aa9f094f8b30a8445
 MISC metadata.xml 158 SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 SHA512 d954564236b67b6ab97846b73f74e715e8f1bec2dba6595e9a5046c2e8c3b93f4879c293f9d1d02d99a533bee56156dae3f31a485697128c51af14cdbfdada8a WHIRLPOOL d03e7293d09d794d61c095a423f945b3644355a247f270a73ca8d30b4dfe9c98244297536bfd1a4bd6c14794aa1152eca20fd83bfdf3e1e74d4f676152d35ada
