@@ -1,6 +1,10 @@
 # ChangeLog for games-engines/scummvm-tools
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-engines/scummvm-tools/ChangeLog,v 1.65 2014/10/30 02:18:55 mr_bones_ Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-engines/scummvm-tools/ChangeLog,v 1.66 2015/02/19 06:22:02 mr_bones_ Exp $
+
+  19 Feb 2015; Michael Sterrett <mr_bones_@gentoo.org>
+  scummvm-tools-1.7.0.ebuild:
+  tidy
 
   30 Oct 2014; Michael Sterrett <mr_bones_@gentoo.org>
   -files/scummvm-tools-1.4.0-boost.patch, -scummvm-tools-1.4.0.ebuild:
